# Secrets

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  COMPLIANCE_SIMPLIFICATION_SUMMARY.md  FLATHUB_SUBMISSION.md  IMPLEMENTATION_GAPS.md  IMPLEMENTED_FEATURES.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  TODO.md  UI_IMPROVEMENTS_SUMMARY.md  build.sh  cleanup.sh  flathub.json  io.github.tobagin.secrets-local.yml  io.github.tobagin.secrets.yml  meson.build  meson_post_install.py  minimal_test.py  prepare-release.sh  pyproject.toml  run-dev.sh  run_tests.py  secrets-dev  secrets.in  test_complete_solution.py  test_compliance_dashboard.py  test_comprehensive_setup.py  test_gpg_validation.py  test_missing_deps.py  test_new_features.py  test_pass_command.py  test_preferences_dialog.py  (+3 more)
.github/: FUNDING.yml
data/: com.example.secrets.appdata.xml.in  com.example.secrets.desktop.in  io.github.tobagin.secrets.appdata.xml.in  io.github.tobagin.secrets.desktop.in  meson.build  secrets.ui  style.css
data/screenshots/: README.md
data/ui/: main_window.blp  main_window.ui  shortcuts_window.blp  shortcuts_window.ui
data/ui/components/: header_bar.blp  header_bar.ui  main_menu.blp  main_menu.ui  password_details.ui  password_generator_popover.blp  password_generator_popover.ui  password_generator_widget.blp  password_list.blp
data/ui/dialogs/: add_folder_dialog.ui  add_password_dialog.ui  compliance_dashboard_dialog.blp  edit_folder_dialog.ui  edit_password_dialog.ui  folder_dialog.blp  git_setup_dialog.blp  git_setup_dialog.ui  git_status_dialog.blp  git_status_dialog.ui  import_export_dialog.blp  import_export_dialog.ui  lock_dialog.blp  lock_dialog.ui  password_details_dialog.blp  password_dialog.blp  password_generator_dialog.blp  password_generator_dialog.ui  preferences_dialog.blp
data/ui/setup/: create_gpg_page.blp  create_gpg_page.ui  dependencies_page.blp  dependencies_page.ui  install_pass_page.blp  main.blp  main.ui  settings  setup_complete_page.blp  setup_complete_page.ui  setup_wizard.blp  wizard_dialog.blp  wizard_dialog.ui
data/ui/widgets/: color_picker.ui  folder_expander_row.blp  folder_expander_row.ui  icon_picker.ui  password_entry_row.blp  password_row.ui
docs/: CONTRIBUTING.md  FLATHUB_README.md  SETTINGS_GUIDE.md  VERSION_MANAGEMENT.md
packaging/: secrets-dev.in
po/: LINGUAS  README.md  en_GB.po  en_US.po  es.po  ga.po  meson.build  nl.po  pt_PT.po  secrets.pot
scripts/: README.md  comprehensive_version_check.py  generate_version.py  monitor_version_sync.py  pre_commit_version_check.py  (+8 more)
secrets/: __init__.py  add_password_dialog.py  app_info.py  application.py  commands.py  config.py  dependency_setup_dialog.py  edit_dialog.py  error_handling.py  gpg_setup_dialog.py  i18n.py  main.py  managers.py  meson.build  move_rename_dialog.py  password_store.py  performance.py  preferences_dialog.py  secrets.gresource.xml  services.py  shortcuts_window.py  ui_utils.py  window.py
secrets/controllers/: dynamic_folder_controller.py  password_details_controller.py  password_list_controller.py  setup_controller.py  window_state_manager.py
secrets/managers/: git_manager.py
secrets/services/: __init__.py  password_service.py
secrets/setup_wizard/: __init__.py  dependencies_page.py  setup_complete_page.py  wizard_dialog.py
secrets/ui/components/: git_status_component.py  password_details.py  password_generator_popover.py
secrets/ui/dialogs/: __init__.py  add_folder_dialog.py  add_password_dialog.py  edit_password_dialog.py  import_export_dialog.py  lock_dialog.py  move_rename_dialog.py  password_generator_dialog.py  preferences_dialog.py
secrets/utils/: gpg_utils.py  system_utils.py
src/secrets/: __init__.py  __main__.py  app_info.py  application.py  build_info.py  commands.py  config.py  i18n.py  log_parser.py  logging_system.py  main.py  meson.build  models.py  password_store.py  performance.py  secrets.gresource.xml  security_manager.py  shortcuts_window.py  version.py  window.py
src/secrets/cache/: __init__.py  content_cache.py
src/secrets/compliance/: __init__.py  compliance_manager.py
src/secrets/compliance/gdpr/: __init__.py  gdpr_compliance.py
src/secrets/compliance/hipaa/: __init__.py  hipaa_compliance.py
src/secrets/compliance/pci_dss/: __init__.py  pci_dss_compliance.py
src/secrets/controllers/: __init__.py  action_controller.py  dynamic_folder_controller.py  password_details_controller.py  password_list_controller.py  window_controller.py
src/secrets/managers/: __init__.py  clipboard_manager.py  favicon_manager.py  metadata_manager.py  password_display_manager.py  search_manager.py  toast_manager.py
src/secrets/security/: __init__.py  audit_logger.py  cert_pinning.py  encrypted_config.py  hardware_keys.py  incident_response.py  keyring_manager.py  secure_memory.py  two_factor_auth.py
src/secrets/services/: __init__.py  git_service.py  password_content_parser.py  password_service.py
src/secrets/setup_wizard/: __init__.py  create_gpg_page.py  dependencies_page.py  install_pass_page.py  setup_complete_page.py  wizard_dialog.py
src/secrets/ui/: __init__.py
src/secrets/ui/components/: __init__.py  password_generator_popover.py  password_generator_widget.py  password_list.py
src/secrets/ui/dialogs/: __init__.py  about_dialog.py  add_folder_dialog.py  add_password_dialog.py  compliance_dashboard_dialog.py  edit_folder_dialog.py  edit_password_dialog.py  folder_dialog.py  git_setup_dialog.py  git_status_dialog.py  import_export_dialog.py  lock_dialog.py  password_details_dialog.py  password_dialog.py  password_dialog_utils.py  password_generator_dialog.py  preferences_dialog.py  preferences_dialog_original.py
src/secrets/ui/widgets/: __init__.py  color_paintable.py  color_picker.py  folder_expander_row.py  icon_picker.py  password_entry_row.py  password_row.py
src/secrets/utils/: __init__.py  avatar_manager.py  environment_setup.py  gpg_utils.py  metadata_handler.py  password_strength.py  path_validator.py  ui_utils.py  url_extractor.py
(+49 files in other folders)
